<resources>
    <string name="app_name">Learning Assistance</string>
    <string name="no_face_detected_info">No Faces Detected!</string>
    <string name="eulerx">EulerX: %1$.2f</string>
    <string name="eulery">EulerY: %1$.2f</string>
    <string name="eulerz">EulerZ: %1$.2f</string>
    <string name="right_eye_open">Right eye: %1$.2f</string>
    <string name="left_eye_open">Left eye: %1.2f</string>
    <string name="ear">EAR: %1.2f</string>
    <string name="face_detector_latency">latency: </string>
    <string name="drowsiness_timer">%1$d</string>
    <string name="no_face_timer">%1$d</string>
    <string name="head_pose_attention_timer">%1$d</string>
    <string name="drowsiness_tired_msg">You are tired</string>
    <string name="warning">Warning</string>
    <string name="are_you_still_there">Are you still there?</string>
    <string name="drowsiness_alert_dialog_msg">You appear to be fatigue. Don\'t fall asleep! If you want to close the alarm, please click the close button below.</string>
    <string name="no_face_alert_dialog_msg">We cannot see your beautiful face! Please check and adjust your camera so that the system can see your face. </string>
    <string name="basic_head_pose_msg">Click start to begin basic head pose measurement for 5 seconds.</string>
    <string name="basic_head_pose_complete_msg">Basic head pose measurement is done, the system will start analyzing your attention.</string>
    <string name="basic_head_pose_counting_msg">Measuring\.\.\. %1$d</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="start">start</string>
    <string name="main_activity_welcome_msg">Welcome to Your Learning Space</string>
    <string name="start_detection">START DETECTION</string>
    <string name="start_detection_notification_msg">Before clicking the got it button, please place your phone in the appropriate position. After starting the detection, please maintain your standard learning pose for five seconds and do not move the device. The system will use your standard posture as a reference for further analysis.</string>
    <string name="understand">Got it</string>
    <string name="learning_time">Learning Duration</string>
    <string name="_60_00">60:00</string>
    <string name="main_activity_timer">%1$02d:00</string>
    <string name="learning_count_down_timer">%1$02d:%2$02d</string>
    <string name="complete_learning_title">CONGRATULATIONS</string>
    <string name="complete_learning_msg">You have finished your learning! Please click the view results button below to check your learning achievements</string>
    <string name="view_results">VIEW RESULTS</string>
    <string name="retry">RETRY</string>
    <string name="head_pose_retry_msg">No faces detected while measuring basic head poses. Please try again!</string>
    <string name="retry_basic_head_pose_measurement_msg">Retry basic head pose measurement?</string>
    <string name="retyr_basic_head_pose_measurement_content">Do you want to measure your basic head pose again?</string>
    <string name="head_pose_inattention_msg">Don\'t look around! Please pay attention on your learning task. If you have a hard time maintaining your concentration, consider taking a rest.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="schedule">Schedule</string>
    <string name="add_a_learning_task">Add a learning task</string>
    <string name="new_learning_task">Item</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="select_task_duration">Duration</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome</string>
    <string name="today">Today</string>
    <string name="home_page_task_summary_msg">%d Tasks</string>
    <string name="to_do_today">To do today</string>
    <string name="in_progress">In progress</string>
    <string name="total">Total</string>
    <string name="percent">"%d%%</string>
    <string name="task_duration">%d minutes</string>
    <string name="delete_task">Delete this task?</string>
    <string name="delete_task_detail">Are you sure you want to delete this task?</string>
    <string name="delete">Delete</string>
    <string name="please_notice">Please Notice</string>
    <string name="notification">Notification</string>
    <string name="precaution_description">To provide more accurate results, we need to analyze your learning position before starting concentration analysis. This will measure your average head rotation degrees and eyes aspect ratio to avoid any deviations caused by the angle between you and the camera.</string>
    <string name="precaution_item1">Please ensure that your face appears within the camera.</string>
    <string name="precaution_item2">Please try to avoid moving your head while analyzing.</string>
    <string name="precaution_item3">Please try to avoid moving your cellphone after analyzing.</string>
    <string name="precaution_item4">Please restart this analysis if you change the position.</string>
    <string name="head_pose_analysis">Head Pose Analysis</string>
    <string name="start_head_pose_analysis">Start Head Pose Analysis</string>
    <string name="analysis_details">Analysis Details</string>
    <string name="head_pose_analysis_instruction1">Please ensure your face has appeared in the camera.</string>
    <string name="num1">1.</string>
    <string name="_2">2.</string>
    <string name="head_pose_instrc2">Please select a good position to place your device. We recommend to place it in front of you.</string>
    <string name="num3">3.</string>
    <string name="head_pose_instruc3">Click the button, start analysis after 3 sec</string>
    <string name="num4">4.</string>
    <string name="head_pose_instruc4">During analysis, please not to move the phone or look around. Please focus on what you want to study.</string>
    <string name="face_detection">Face Detection</string>
    <string name="head_pose_card_eulerx">Rotation (up and down): %.2f degree</string>
    <string name="head_pose_card_eulery">Rotation (left and right): %.2f degree</string>
    <string name="next">Next</string>
    <string name="restart">Restart</string>
    <string name="head_pose_analysis_cannot_start">No face detected. Cannot start an analysis!</string>
    <string name="head_pose_analysis_title_detected">Face Detected</string>
    <string name="head_pose_analysis_title_not_detected">No Face Detected</string>
    <string name="head_pose_analysis_restart_msg">No face detected during analysis. Please try again.</string>
    <string name="concentration_analysis">Concentration Analysis</string>
    <string name="detection_timer">%1$02d:%2$02d:%3$02d</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="setting">Setting</string>
    <string name="show_graphical_detection_results">Show graphical detection results</string>
    <string name="show_graphical_detection_result_details">Show the graphical detection results on the camera view. Such as face bounding boxes, face landmarks, and object bounding boxes.</string>
    <string name="hide_detection_information">Hide detection information</string>
    <string name="hide_detection_info_details">Hide the details information of the detection results. Such as face detection, eyes detection, head rotation detection and electronic devices detection.</string>
    <string name="restart_head_position_analysis">restart basic head position analysis</string>
    <string name="eyes_open">Eyes open</string>
    <string name="eyes_close">Eyes close</string>
    <string name="pay_attention">Pay attention</string>
    <string name="electronic_devices_not_detected">Electronic devices: Not detected</string>
    <string name="electronic_devices_detected">Electronic devices: %1$s</string>
    <string name="analysis_result">Analysis Result</string>
    <string name="back_to_home_page">Back to home page</string>
    <string name="leave">Leave</string>
    <string name="fatigue">Fatigue</string>
    <string name="look_around">Look around</string>
    <string name="elect_dev">Using 3C</string>
    <string name="attention">Attention</string>
    <string name="behavior">behavior</string>
    <string name="analysis">Analysis</string>
    <string name="attention_score">Attention Score</string>
    <string name="attention_score_actual">%1$.1f / 100</string>
    <string name="report">report</string>
    <string name="report_big">Report</string>
    <string name="average_attention">Average attention</string>
    <string name="average_learning">Average learning time</string>
    <string name="day">/ day</string>
    <string name="evaluation">Evaluation</string>
    <string name="attention_score_total">%1$.1f / 100</string>
    <string name="learning_time_per_day">%1$d min</string>
    <string name="excellent">Excellent</string>
    <string name="great">Great</string>
    <string name="so_so">So So</string>
    <string name="bad">Bad</string>
    <string name="should_be_improved">Should be improved</string>
    <string name="guide">Guide</string>
    <string name="head_pose_guide_1">Put your device in front of you</string>
    <string name="head_pose_guide_2">Ensure your face has appeared in the camera</string>
    <string name="head_pose_guide_4">Don\'t move while analyzing</string>
    <string name="_5">5.</string>
    <string name="head_pose_guide_5">Focus on what you\'re studying until finished</string>
</resources>