<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detection.HeadPoseMeasureFragment">

    <TextView
        android:id="@+id/head_pose_analysis_title"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/head_pose_analysis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/head_pose_analysis_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        style="?attr/materialCardViewElevatedStyle"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_pose_analysis_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/head_pose_card_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <LinearLayout
                android:id="@+id/head_pose_card_face_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toTopOf="@+id/head_pose_card_eulerx"
                app:layout_constraintStart_toStartOf="@+id/head_pose_card_constraint"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:chipStrokeWidth="0dp"
                    tools:src="@drawable/ic_check2" />

                <TextView
                    style="@style/TextAppearance.Material3.TitleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Face detected"
                    tools:textColor="@color/green" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/head_pose_card_eulerx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toTopOf="@+id/head_pose_card_eulery"
                app:layout_constraintStart_toStartOf="@+id/head_pose_card_constraint"
                app:layout_constraintTop_toBottomOf="@+id/head_pose_card_face_title">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_rotate"/>

                <TextView
                    style="@style/TextAppearance.Material3.TitleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/head_pose_card_eulerx" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/head_pose_card_eulery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/head_pose_card_constraint"
                app:layout_constraintTop_toBottomOf="@+id/head_pose_card_eulerx">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_rotate"/>

                <TextView
                    style="@style/TextAppearance.Material3.TitleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/head_pose_card_eulery" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinderHeadPose"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/head_pose_instrc1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_pose_analysis_info_card" />

    <LinearLayout
        android:id="@+id/head_pose_instrc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/head_pose_instrc2"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/num1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            style="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/head_pose_analysis_instruction1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/head_pose_instrc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/head_pose_instrc3"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/_2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            style="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/head_pose_instrc2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/head_pose_instrc3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/head_pose_instrc4"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/num3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            style="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/head_pose_instruc3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/head_pose_instrc4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/head_pose_start_button"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/num4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            style="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/head_pose_instruc4" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/head_pose_start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/start_head_pose_analysis"
        app:icon="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>